# image-processing-app

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  ALL_FIXES_COMPLETE_FINAL.md  CHECKBOX_REQUIREMENTS_IMPLEMENTATION_REPORT.md  CLEANUP_SUMMARY.md  COMPLETE_GUI_REQUIREMENTS_REPORT.md  CRITICAL_FIXES_COMPLETE.md  DUAL_TRACKING_IMPLEMENTED.md  Dockerfile  ENTERPRISE_FEATURES.md  FINAL_CLEANUP_REPORT.md  FINAL_QA_QC_VERIFICATION_REPORT.md  FINAL_STATUS_ALL_FIXED.md  FIXES_COMPLETED.md  GUI_IMPLEMENTATION_COMPLETE.md  HONEST_VERIFICATION.md  IMAGE_OPTIMIZATION_CORRECTLY_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  MODERN_FEATURES_SUMMARY.md  MONITORING_FIX_COMPLETE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  NUCLEAR_FIX_APPLIED.md  NUMPY_FIX_README.md  PART_FOUR_REQUIREMENTS_IMPLEMENTATION_REPORT.md  PART_THREE_REQUIREMENTS_IMPLEMENTATION_REPORT.md  PROJECT_STRUCTURE.md  PYQT6_FIX_REPORT.md  README.md  THE_BOTTOM_LINE.md  TRUST_ISSUE_CACHE_PROBLEM.md  WORKSPACE_CLEANUP_COMPLETE.md  api_launcher.py  application_metrics.py  check_cuda.py  check_pytorch_cuda.py  clear_cache.py  code_quality_implementation_summary.py  (+71 more)
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  security.yml
archive/temp_files/: comprehensive_code_quality_fixer.py  final_implementation_report.py  setup_modern_infrastructure.py  setup_precommit.py  unicode_encoding_fixer.py
archive/test_files/: comprehensive_file_verification.py  comprehensive_qa_qc_verification.py  final_code_quality_verification.py  functional_verification.py  simple_test.py  test_algorithms.py  test_checkbox_requirements.py  test_enterprise_integration.py  test_image_quality_constraints.py  test_monitoring_comprehensive.py  test_monitoring_final.py  test_simple_import.py  verify_complete_matrix.py  verify_enterprise_features.py  verify_menu_item_2.py  verify_menu_item_3_complete.py  verify_menu_item_4_complete.py  verify_menu_item_8_complete.py  verify_monitoring_complete.py  verify_quality_implementation.py  verify_requirements.py
archive/validation/: file_currency_assessment.py  implementation_summary.py
config/: .env.example  config.toml  mypy.ini
config/colors/: crayola_colors.json  css3_colors.json  iso_colors.json  lab_scientific_colors.json  natural_colors.json  pantone_colors.json  ral_classic_colors.json  x11_colors.json
docs/: GUI_IMPLEMENTATION_COMPLETE.md  IMAGE_QUALITY_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  conf.py  index.rst  installation.md
docs/architecture/adr/: 001-use-pyqt6-for-gui.md  006-correlation-id-logging.md  007-health-check-endpoints.md  README.md
examples/: array_safety_integration.py
scripts/demo/: nice_to_have_features.py
scripts/setup/: final_cleanup.py  fix_numpy_compatibility.py
src/: __init__.py
src/access_control/: __init__.py  user_access.py
src/async_processing/: modern_concurrency.py
src/audit/: file_audit.py
src/cli/: main.py  validators.py
src/config/: modern_settings.py
src/core/: __init__.py  advanced_algorithms.py  file_manager.py  image_processor.py  metadata_handler.py
src/gui/: destination_matrix_clean.py  destination_matrix_complete.py  enhanced_processing_controls.py  file_list_enhanced.py  frame_b_rows_2_and_3.py  frame_b_rows_2_and_3_clean.py  main_window.py  main_window_complete.py  main_window_complete_clean.py  main_window_simple.py
src/models/: __init__.py  blur_detector.py  caption_generator.py  color_analyzer.py
src/monitoring/: performance_dashboard.py
src/observability/: modern_monitoring.py
src/security/: security_scanner.py
src/transforms/: __init__.py  activity_transforms.py  artistic_transforms.py  basic_transforms.py
src/utils/: __init__.py  array_safety.py  database.py  health_checks.py  image_quality_manager.py  logger.py  monitoring.py  monitoring_clean.py  numpy_compatibility_fix.py  quality_controlled_transforms.py  structured_logging.py  text_processor.py
src/validation/: input_validator.py
src/web/: __init__.py  api_server.py
tests/: conftest.py  test_activity_transforms.py  test_all_components_final.py  test_critical_fixes.py  test_final_fixes.py  test_metadata.py  test_modern_features.py  test_transforms.py
tests/integration/: test_gui_integration.py
tools/analysis/: code_analysis_comprehensive.py
tools/deployment/: Dockerfile
tools/maintenance/: code_quality_automation.py  code_quality_implementation_summary.py  code_quality_master.py  linting_automation.py  verify_cleanup.py
tools/security/: security_scanner.py
validation_reports/: enterprise_validation_20251126_045001.json
