[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-processing-app"
dynamic = ["version"]
description = "Enterprise-grade image processing application with AI-powered analysis and batch transformations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "The-Sage-Mage", email = "contact@thesagemage.com" },
]
keywords = [
    "image-processing", 
    "computer-vision", 
    "batch-processing", 
    "ai-analysis",
    "opencv",
    "pillow",
    "gui",
    "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies
    "click>=8.1.0,<8.2.2",
    "colorama>=0.4.6",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "tqdm>=4.66.0",
    
    # Image processing and computer vision
    "opencv-python>=4.9.0",
    "Pillow>=10.2.0",
    "scikit-image>=0.22.0",
    "piexif>=1.1.3",
    
    # Data processing and analysis
    "numpy>=1.20.0,<2.0.0",
    "pandas>=2.0.3",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.2",
    
    # Database and persistence
    "sqlalchemy>=2.0.19",
    "joblib>=1.3.1",
    
    # GUI framework
    "PyQt6>=6.5.2",
    "PyQt6-Qt6>=6.5.2",
    "PyQt6-sip>=13.5.2",
    
    # Document generation
    "reportlab>=4.0.4",
    
    # Language tools
    "language-tool-python>=2.7.1",
    "pyspellchecker>=0.7.2",
    
    # EXIF data handling
    "exifread>=3.0.0",
    
    # Windows-specific
    "pywin32>=306; sys_platform=='win32'",
    
    # Modern configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# AI and Machine Learning features
ai = [
    "torch>=2.1.0",
    "transformers>=4.30.0", 
    "ultralytics>=8.0.100",
]

# Web interface
web = [
    "fastapi>=0.101.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0.0",
    "jinja2>=3.1.0",
]

# Development and testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xvfb>=3.0.0",  # For GUI testing on Linux
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "coverage>=7.3.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

# Performance profiling
profiling = [
    "py-spy>=0.3.14",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

# All optional dependencies
all = [
    "image-processing-app[ai,web,dev,docs,profiling]"
]

[project.scripts]
imgproc = "src.cli.main:main"
imgproc-gui = "gui_launcher:main"

[project.urls]
Homepage = "https://github.com/The-Sage-Mage-LLC/image-processing-app"
Documentation = "https://github.com/The-Sage-Mage-LLC/image-processing-app/blob/main/README.md"
Repository = "https://github.com/The-Sage-Mage-LLC/image-processing-app.git"
Issues = "https://github.com/The-Sage-Mage-LLC/image-processing-app/issues"
Changelog = "https://github.com/The-Sage-Mage-LLC/image-processing-app/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv_312_fixed
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = false  # Gradually enable
check_untyped_defs = true
disallow_untyped_decorators = false  # Gradually enable
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true  # For third-party packages without stubs

# Exclude problematic directories
exclude = [
    "venv_312_fixed/",
    "build/",
    "dist/",
    "tests/",  # Gradually include
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
    "unit: marks tests as unit tests",
    "ai: marks tests that require AI models",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv*/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
    "test_*.py",
    "*_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe
    "DJ",  # flake8-django
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # NumPy-specific rules
    "PERF", # perflint
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # Use of assert
    "S603",  # subprocess call: check for execution of untrusted input
    "S607",  # starting a process with a partial executable path
    "COM812", # trailing comma missing
    "ISC001", # single line implicit string concatenation
    "PD011",  # pandas use .values
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "C901",   # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*" = ["S101", "PLR2004", "PLR0913"]
"src/cli/*" = ["T201"]  # Allow print statements in CLI
"gui_launcher.py" = ["T201"]
"main.py" = ["T201"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.bandit]
exclude_dirs = ["tests", "venv_312_fixed", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/*test*.py", "*/test_*.py"]